# swiss-qr-bill

./: .coveragerc  .gitignore  .travis.yml  CHANGELOG.rst  LICENSE.TXT  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: main.yml  test.yml
qrbill/: __init__.py  address.py  bill.py  constants.py  errors.py  esr.py  printer.py
scripts/: qrbill
tests/: __init__.py  test_address.py  test_integration.py  test_printer.py  test_qrbill.py
tmp_stdnum/: __init__.py  iban.py  iso11649.py  util.py
tmp_stdnum/ch/: esr.py
tmp_stdnum/iso7064/: mod_97_10.py
