[metadata]
name = qrbill
version = 0.6.1
description = A library to generate Swiss QR-bill payment slips
long_description = file: README.rst, CHANGELOG.rst
license = GPLv3
author = Claude Paroz
author_email = claude@2xlibre.net
url = https://github.com/claudep/swiss-qr-bill/
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3

[options]
packages = find:
scripts =
    scripts/qrbill
install_requires =
    iso3166
    python-stdnum>=1.13
    qrcode
    svgwrite
    importlib-metadata ~= 1.0 ; python_version < "3.8"
test_suite = tests

[flake8]
max-line-length = 119
