[metadata]
name = qrbill
version = 1.1.0
description = A library to generate Swiss QR-bill payment slips
long_description = file: README.rst, CHANGELOG.rst
license = MIT
author = Claude Paroz
author_email = claude@2xlibre.net
url = https://github.com/claudep/swiss-qr-bill/
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
scripts =
    scripts/qrbill
install_requires =
    iso3166
    python-stdnum>=1.13
    qrcode
    svgwrite
    typing_extensions
test_suite = tests
include_package_data = true

[options.extras_require]
lint =
    flake8
    flake8-type-checking
    mypy
    types-qrcode

[options.package_data]
qrbill =
    py.typed

[flake8]
max-line-length = 119
extend-select = TC1
